<resources>
    <string name="app_name">Daily News</string>

    <string name="login_heading">Sign In</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="forget_pass">Forget password?</string>
    <string name="sign_up_here">"Don't have account? <a>Sign Up"</a></string>
    <string name="other_sign_in">or sign in with</string>

    <string name="sign_up_heading">Sign Up</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password_confirm">Re-type Password</string>
    <string name="sign_up_btn">Sign up</string>

    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>